--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 authors = ["Elliot Snow-Kropla <esnowkropla@gmail.com>"]
 
 [dependencies]
+iron = "*"
+staticfile = "*"
+mount = "*"
+router = "*"
+
