Changes to be committed: 	modified:   Cargo.toml 	modified:   src/bin/main.rs 	new file:   src/lib.rs 	new file:   static/index.html 	new file:   templates/index.hbs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,14 @@ router = "*"
 iron-sessionstorage = "*"
 persistent = "*"
 urlencoded = "*"
+serde = "*"
+serde_derive = "*"
+serde_json = "*"
+
+[dependencies.handlebars-iron]
+version = "*"
+features = ["watch"]
+
+[dependencies.rusqlite]
+version = "*"
+features = ["bundled"]
